--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,8 +22,8 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 5em;
 }
 
-.content {
-    margin-top:15em;
+#content {
+    padding-top: 50em;
 }
 
 
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .jumbotron {
     width: 100%;
-    height: 300px;
+    height: 700px;
     background-image: url(../img/jumbotron.jpeg);
     position : absolute;
     background-position: center;
