--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,7 +9,7 @@ p, a {
     color: white;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, label {
     color: white;
 }
 
@@ -39,8 +39,21 @@ h1, h2, h3, h4, h5, h6 {
     background-size: cover;
 }
 
+/* UTILITIES */
+
+.text-justify {
+    text-align: justify;
+}
+
 /* CARDS */
 
 .card-title, .card-text {
 color: black;
 }
+
+.img {
+    margin-top: 10px;
+    height: 50%;
+    width: 100%;
+}
+
