--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -67,9 +67,33 @@ h1, h2, h3, h4, h5, h6, label {
 color: black;
 }
 
-.img {
-    margin-top: 10px;
-    height: 50%;
-    width: 100%;
+/*.img {*/
+/*    margin-top: 10px;*/
+/*    height: 50%;*/
+/*    width: 100%;*/
+/*}*/
+
+
+.card{
+    border-radius: 10px;
+    background: #fff;
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    padding: 20px 10px 18px 36px;
+    width: 900px;
+    cursor: pointer;
+}
+
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+
+.card img{
+    position: absolute;
+    border-radius: 5px;
+    margin-right: 5px;
+    left: 2px;
+    max-height: 150px;
 }
 
