--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -111,3 +111,13 @@ h1, h2, h3, h4, h5, h6, label {
 
 }
 
+.row img {
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.row img:hover{
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
