--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -121,3 +121,7 @@ h1, h2, h3, h4, h5, h6, label {
     transform: scale(1.05);
     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
+
+.row #profilstyle{
+    margin-top: 100px;
+}
