--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -17,9 +17,23 @@ h1, h2, h3, h4, h5, h6, label {
     font-family: "DejaVu Sans Mono"
 }
 
+.text-gradient {
+    background-color: #f3ec78;
+    background-image: linear-gradient(45deg, #3494E6, #EC6EAD);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.lead {
+    letter-spacing: 3px;
+}
+
 .display-4 {
-    margin-top: 2em;
-    margin-bottom: 2em;
+    /*margin-top: 2em;*/
+    /*margin-bottom: 2em;*/
 }
 
 .contact {
@@ -138,10 +152,10 @@ h1, h2, h3, h4, h5, h6, label {
     margin-left: 10px;
 }
 
-.row img:hover{
-    transform: scale(1.05);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-}
+/*.row img:hover{*/
+/*    transform: scale(1.05);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);*/
+/*}*/
 
 .row #profilstyle{
     margin-top: 100px;
