--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,8 +32,8 @@ h1, h2, h3, h4, h5, h6, label {
 }
 
 .display-4 {
-    /*margin-top: 2em;*/
-    /*margin-bottom: 2em;*/
+    margin-top: 2em;
+    margin-bottom: 1em;
 }
 
 .contact {
@@ -50,14 +50,13 @@ h1, h2, h3, h4, h5, h6, label {
 /* NAVBAR */
 
 .navbar {
-    background: #2b3443 !important;
-
+    background-color: #101010 !important;
 }
 
 /* FOOTER */
 
 .footer {
-    background: #2b3443 !important;
+    background-color: #101010 !important;
 }
 
 /* JUMBOTRON */
@@ -79,52 +78,75 @@ h1, h2, h3, h4, h5, h6, label {
     text-align: justify;
 }
 
-#d1{
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+.idea{
+    width: 50px;
+    height: 60px;
 }
-#d2{
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-}
-#d3{
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-}
-#d1:hover{
-    transform: scale(1.1);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)
-}
-#d2:hover{
-    transform: scale(1.1);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)
-}
-#d3:hover{
-    transform: scale(1.1);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)
-}
+
+/*#d1{*/
+/*    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);*/
+/*}*/
+/*#d2{*/
+/*    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);*/
+/*}*/
+/*#d3{*/
+/*    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);*/
+/*}*/
+/*#d1:hover{*/
+/*    transform: scale(1.1);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)*/
+/*}*/
+/*#d2:hover{*/
+/*    transform: scale(1.1);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)*/
+/*}*/
+/*#d3:hover{*/
+/*    transform: scale(1.1);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)*/
+/*}*/
+
 /* CARDS */
 
+.card {
+    background-color: #f3ec78;
+    background-image: linear-gradient(45deg, #3494E6, #EC6EAD);
+    background-size: 100%;
+}
+
 .card-title, .card-text {
-    color: black;
+    color: white;
     font-family: "DejaVu Sans Mono" ;
+}
 
+.social_networks--right {
+    position: absolute;
+    bottom: -8%;
+    left: 60%;
+}
+
+.social_networks--left {
+    position: absolute;
+    bottom: -8%;
+    right: 60%;
 }
 
 
-.card{
-    border-radius: 10px;
-    background: #fff;
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-    padding: 20px 10px 18px 36px;
-    width: 900px;
-    cursor: pointer;
-}
+/*.card{*/
+/*    border-radius: 10px;*/
+/*    background: #fff;*/
+/*    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);*/
+/*    padding: 20px 10px 18px 36px;*/
+/*    width: 900px;*/
+/*    cursor: pointer;*/
+/*}*/
 
-.card:hover{
-    transform: scale(1.05);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-}
+/*.card:hover{*/
+/*    transform: scale(1.05);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);*/
+/*}*/
 
 
-.card img{
+.project{
     position: absolute;
     justify-content: flex-end;
     border-radius: 5px;
@@ -134,11 +156,11 @@ h1, h2, h3, h4, h5, h6, label {
     max-height: 150px;
 }
 
-.card-text {
-    text-align: justify;
-    margin-left: 15px;
+/*.card-text {*/
+/*    text-align: justify;*/
+/*    margin-left: 15px;*/
 
-}
+/*}*/
 
 .row#skill {
     margin-bottom: 100px;
@@ -146,17 +168,17 @@ h1, h2, h3, h4, h5, h6, label {
 
 }
 
-.row img {
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-left: 10px;
-}
+/*.row img {*/
+/*    border-radius: 10px;*/
+/*    margin-top: 10px;*/
+/*    margin-left: 10px;*/
+/*}*/
 
 /*.row img:hover{*/
 /*    transform: scale(1.05);*/
 /*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);*/
 /*}*/
 
-.row #profilstyle{
+.row #profilstyle {
     margin-top: 100px;
 }
