--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,8 +32,8 @@ h1, h2, h3, h4, h5, h6, label {
 }
 
 .display-4 {
-    /*margin-top: 2em;*/
-    /*margin-bottom: 2em;*/
+    margin-top: 2em;
+    margin-bottom: 1em;
 }
 
 .contact {
@@ -43,21 +43,33 @@ h1, h2, h3, h4, h5, h6, label {
 #content {
     padding-top: 50em;
 }
+
 .description {
-    font-family: "DejaVu Sans Mono", "Helvetica";
+    font-family: "DejaVu Sans Mono", "Helvetica", serif;
 }
 
 /* NAVBAR */
 
 .navbar {
-    background: #2b3443 !important;
+    background-color: #101010 !important;
+}
+.navbar-nav{
+margin-left: auto;
+}
 
+.navbar a:hover {
+    /* MAGIC */
+    background-image: linear-gradient(transparent 64px, #F243B3 50%, #FFCA47 100%);
+}
+
+.logo {
+    font-size: 2em;
 }
 
 /* FOOTER */
 
 .footer {
-    background: #2b3443 !important;
+    background-color: #101010 !important;
 }
 
 /* JUMBOTRON */
@@ -65,13 +77,16 @@ h1, h2, h3, h4, h5, h6, label {
 .jumbotron {
     width: 100%;
     height: 700px;
-    background-image: url(../img/jumbotron.jpeg);
+    background-image: url(../img/jumbotronlayer.jpeg);
     position : absolute;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: "DejaVu Sans Mono"
 }
+.container.text-center.text-light {
+    margin-top: 35em;
+}
+
 
 /* UTILITIES */
 
@@ -79,52 +94,81 @@ h1, h2, h3, h4, h5, h6, label {
     text-align: justify;
 }
 
-#d1{
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+.idea{
+    width: 70px;
+    height: 60px;
 }
-#d2{
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+
+/*#d1{*/
+/*    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);*/
+/*}*/
+/*#d2{*/
+/*    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);*/
+/*}*/
+/*#d3{*/
+/*    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);*/
+/*}*/
+/*#d1:hover{*/
+/*    transform: scale(1.1);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)*/
+/*}*/
+/*#d2:hover{*/
+/*    transform: scale(1.1);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)*/
+/*}*/
+/*#d3:hover{*/
+/*    transform: scale(1.1);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)*/
+/*}*/
+
+/******* CARDS *********/
+
+.card {
+    background-color: #f3ec78;
+    background-image: linear-gradient(45deg, #3494E6, #EC6EAD);
+    background-size: 100%;
+    box-shadow: 0 1px 3px #EC6EAD, 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
-#d3{
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-}
-#d1:hover{
-    transform: scale(1.1);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)
-}
-#d2:hover{
-    transform: scale(1.1);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)
-}
-#d3:hover{
-    transform: scale(1.1);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)
-}
-/* CARDS */
+
+/*.card:hover {*/
+/*    box-shadow: 0 10px 28px #EC6EAD, 0 10px 10px #f3ec78;*/
+/*}*/
 
 .card-title, .card-text {
-    color: black;
+    color: white;
     font-family: "DejaVu Sans Mono" ;
+}
 
+.social_networks--right {
+    position: absolute;
+    bottom: -8%;
+    left: 60%;
+}
+
+.social_networks--left {
+    position: absolute;
+    bottom: -8%;
+    right: 60%;
 }
 
 
-.card{
-    border-radius: 10px;
-    background: #fff;
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-    padding: 20px 10px 18px 36px;
-    width: 900px;
-    cursor: pointer;
-}
+/*.card{*/
+/*    border-radius: 10px;*/
+/*    background: #fff;*/
+/*    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);*/
+/*    padding: 20px 10px 18px 36px;*/
+/*    width: 900px;*/
+/*    cursor: pointer;*/
+/*}*/
 
-.card:hover{
-    transform: scale(1.05);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-}
+/*.card:hover{*/
+/*    transform: scale(1.05);*/
+/*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);*/
+/*}*/
 
 
-.card img{
+.project{
     position: absolute;
     justify-content: flex-end;
     border-radius: 5px;
@@ -134,11 +178,11 @@ h1, h2, h3, h4, h5, h6, label {
     max-height: 150px;
 }
 
-.card-text {
-    text-align: justify;
-    margin-left: 15px;
+/*.card-text {*/
+/*    text-align: justify;*/
+/*    margin-left: 15px;*/
 
-}
+/*}*/
 
 .row#skill {
     margin-bottom: 100px;
@@ -146,17 +190,339 @@ h1, h2, h3, h4, h5, h6, label {
 
 }
 
-.row img {
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-left: 10px;
-}
+/*.row img {*/
+/*    border-radius: 10px;*/
+/*    margin-top: 10px;*/
+/*    margin-left: 10px;*/
+/*}*/
 
 /*.row img:hover{*/
 /*    transform: scale(1.05);*/
 /*    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);*/
 /*}*/
 
-.row #profilstyle{
+.row #profilstyle {
     margin-top: 100px;
 }
+
+
+
+/******* Bento's expirementations *******/
+/*body {*/
+/*    background: rgb(15, 15, 15);*/
+/*}*/
+
+.neon {
+    /*position: absolute;*/
+    /*top: 70%;*/
+    /*left: 10%;*/
+    width: 300px;
+    height: 70px;
+    /*margin: -50px 0 0 -150px;*/
+    text-align: center;
+    border-radius: 8px;
+    border: 3px solid rgb(0, 40, 70);
+    cursor: pointer;
+    z-index: 1;
+}
+
+.neon {
+    animation: border-flicker 2s linear forwards;
+}
+
+.neon-text {
+    font-family: "Open Sans";
+    font-weight: 300;
+    font-size:2em;
+    margin: 15px 0 0;
+    color: rgba(23, 108, 255, 0.5);
+}
+
+.neon .neon-text {
+    animation: text-flicker 2s linear forwards;
+}
+
+.neon .first {
+    animation: letter-flicker 3s linear infinite;
+}
+
+@keyframes text-flicker {
+    2% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    3% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    6% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    9% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    11% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    14% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    18% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    32% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    33% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    37% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    39% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    43% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    46% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    47% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    100% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+}
+
+@keyframes letter-flicker {
+    2% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    3% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    6% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    9% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    11% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    14% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    18% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    32% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    33% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    37% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    39% {
+        color: rgba(23,108,255,.5);
+        text-shadow: none;
+    }
+    40% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+    100% {
+        color: rgb(23, 108, 255);
+        text-shadow: 0 0 15px rgb(23,108,255);
+    }
+}
+
+@keyframes border-flicker {
+    2% {
+        border: 3px solid rgb(0, 180, 230);
+        box-shadow: 0 0 15px -1px rgb(0, 180, 230),
+        0 0 12px -1px rgb(0, 180, 230) inset;
+    }
+    3% {
+        border: 3px solid rgb(0, 40, 70);
+        box-shadow: none;
+    }
+    5% {
+        border: 3px solid rgb(0, 180, 230);
+        box-shadow: 0 0 15px -1px rgb(0, 180, 230),
+        0 0 12px -1px rgb(0, 180, 230) inset;
+    }
+    6% {
+        border: 3px solid rgb(0, 40, 70);
+        box-shadow: none;
+    }
+    7% {
+        border: 3px solid rgb(0, 180, 230);
+        box-shadow: 0 0 15px -1px rgb(0, 180, 230),
+        0 0 12px -1px rgb(0, 180, 230) inset;
+    }
+    9% {
+        border: 3px solid rgb(0, 40, 70);
+        box-shadow: none;
+    }
+    13% {
+        border: 3px solid rgb(0, 180, 230);
+        box-shadow: 0 0 15px -1px rgb(0, 180, 230),
+        0 0 12px -1px rgb(0, 180, 230) inset;
+    }
+    16% {
+        border: 3px solid rgb(0, 40, 70);
+        box-shadow: none;
+    }
+    18% {
+        border: 3px solid rgb(0, 180, 230);
+        box-shadow: 0 0 15px -1px rgb(0, 180, 230),
+        0 0 12px -1px rgb(0, 180, 230) inset;
+    }
+    22% {
+        border: 3px solid rgb(0, 40, 70);
+        box-shadow: none;
+    }
+    34% {
+        border: 3px solid rgb(0, 180, 230);
+        box-shadow: 0 0 15px -1px rgb(0, 180, 230),
+        0 0 12px -1px rgb(0, 180, 230) inset;
+    }
+    36% {
+        border: 3px solid rgb(0, 40, 70);
+        box-shadow: none;
+    }
+    54% {
+        border: 3px solid rgb(0, 180, 230);
+        box-shadow: 0 0 15px -1px rgb(0, 180, 230),
+        0 0 12px -1px rgb(0, 180, 230) inset;
+    }
+    100% {
+        border: 3px solid rgb(0, 180, 230);
+        box-shadow: 0 0 15px -1px rgb(0, 180, 230),
+        0 0 12px -1px rgb(0, 180, 230) inset;
+    }
+}
+
+
+
+
+
+
+/******** NEON BUTTONS ********/
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.buttons {
+    margin: 10%;
+    text-align: center;
+}
+
+.btn-hover {
+    width: 200px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 20px;
+    height: 55px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+
+    border-radius: 50px;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:hover {
+    background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+    outline: none;
+}
+
+.btn-hover.color-1 {
+    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+}
+.btn-hover.color-2 {
+    background-image: linear-gradient(to right, #f5ce62, #e43603, #fa7199, #e85a19);
+    box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
+}
+.btn-hover.color-3 {
+    background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+    box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
+}
+.btn-hover.color-4 {
+    background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
+    box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
+}
+.btn-hover.color-5 {
+    background-image: linear-gradient(to right, #0ba360, #3cba92, #30dd8a, #2bb673);
+    box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
+}
+.btn-hover.color-6 {
+    background-image: linear-gradient(to right, #009245, #FCEE21, #00A8C5, #D9E021);
+    box-shadow: 0 4px 15px 0 rgba(83, 176, 57, 0.75);
+}
+.btn-hover.color-7 {
+    background-image: linear-gradient(to right, #6253e1, #852D91, #A3A1FF, #F24645);
+    box-shadow: 0 4px 15px 0 rgba(126, 52, 161, 0.75);
+}
+.btn-hover.color-8 {
+    background-image: linear-gradient(to right, #29323c, #485563, #2b5876, #4e4376);
+    box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
+}
+.btn-hover.color-9 {
+    background-image: linear-gradient(to right, #25aae1, #4481eb, #04befe, #3f86ed);
+    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+}
+.btn-hover.color-10 {
+    background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B);
+    box-shadow: 0 4px 15px 0 rgba(236, 116, 149, 0.75);
+}
+.btn-hover.color-11 {
+    background-image: linear-gradient(to right, #eb3941, #f15e64, #e14e53, #e2373f);  box-shadow: 0 5px 15px rgba(242, 97, 103, .4);
+}
+
+
+
