--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,20 +1,23 @@
-/* GENERAL */
-html {
-    scroll-behavior: smooth;
+/*************************************/
+/********** VARIABLES CSS ************/
+/*************************************/
+
+:root {
+    --main-bg-color: #101010;
+    --main-text-color: #ffffff;
 }
 
-body {
-    background-color: #101010;
-    /*padding: 4.5em 0em 3em 0em;*/
-}
+/************************************/
+/************* GENERAL *************/
+/************************************/
 
-p, a {
-    color: white;
-}
+html { scroll-behavior: smooth; }
 
-h1, h2, h3, h4, h5, h6, label {
-    color: white;
-    font-family: "DejaVu Sans Mono"
+body { background-color: var(--main-bg-color); }
+
+p, a, h1, h2, h3, h4, h5, h6, label {
+    color: var(--main-text-color);
+    font-family: 'Roboto', sans-serif;
 }
 
 .text-gradient {
@@ -27,52 +30,29 @@ h1, h2, h3, h4, h5, h6, label {
     -moz-text-fill-color: transparent;
 }
 
-.lead {
-    letter-spacing: 3px;
-}
+.display-4 { margin: 2em 0 1em; }
 
-.display-4 {
-    margin-top: 2em;
-    margin-bottom: 1em;
-}
+#content { padding-top: 50em; }
 
-.contact {
-    margin-bottom: 5em;
-}
+/**************************************/
+/************* NAVBAR ***************/
+/**********************************/
 
-#content {
-    padding-top: 50em;
-}
+.navbar { background-color: var(--main-bg-color) !important; }
 
-.description {
-    font-family: "DejaVu Sans Mono", "Helvetica", serif;
-}
+.navbar-nav{ margin-left: auto; }
 
-/* NAVBAR */
+/*.navbar a:hover { background-image: linear-gradient(transparent 64px, #F243B3 50%, #FFCA47 100%); }*/
 
-.navbar {
-    background-color: #101010 !important;
-}
-.navbar-nav{
-margin-left: auto;
-}
+/**************************************/
+/************* FOOTER ***************/
+/**********************************/
 
-.navbar a:hover {
-    /* MAGIC */
-    background-image: linear-gradient(transparent 64px, #F243B3 50%, #FFCA47 100%);
-}
+.footer { background-color: #101010 !important; }
 
-.logo {
-    font-size: 2em;
-}
-
-/* FOOTER */
-
-.footer {
-    background-color: #101010 !important;
-}
-
-/* JUMBOTRON */
+/**************************************/
+/*********** JUMBOTRON **************/
+/**********************************/
 
 .jumbotron {
     width: 100%;
@@ -83,9 +63,8 @@ margin-left: auto;
     background-repeat: no-repeat;
     background-size: cover;
 }
-.container.text-center.text-light {
-    margin-top: 35em;
-}
+
+.container.text-center.text-light { margin-top: 35em; }
 
 
 /* UTILITIES */
@@ -127,7 +106,7 @@ margin-left: auto;
     background-color: #f3ec78;
     background-image: linear-gradient(45deg, #3494E6, #EC6EAD);
     background-size: 100%;
-    box-shadow: 0 1px 3px #EC6EAD, 0 1px 2px rgba(0,0,0,0.24);
+    /*box-shadow: 0 1px 3px #EC6EAD, 0 1px 2px rgba(0,0,0,0.24);*/
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
