--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,7 +6,6 @@
     --main-bg-color: #101010;
     --main-text-color: #ffffff;
     --main-font-family: 'Roboto', sans-serif;
-
     --gradient-primary-color: #3494E6;
     --gradient-secondary-color: #EC6EAD;
 }
@@ -17,7 +16,10 @@
 
 html { scroll-behavior: smooth; }
 
-body { background-color: var(--main-bg-color); }
+body {
+    background-color: var(--main-bg-color);
+    padding-top: 37px;
+}
 
 p, a, h1, h2, h3, h4, h5, h6, label {
     color: var(--main-text-color);
@@ -45,7 +47,7 @@ footer a:hover {
 
 .display-4 { margin: 2em 0 1em; }
 
-#content { padding-top: 50em; }
+/*#content { padding-top: 50em; }*/
 
 /**************************************/
 /************* NAVBAR ***************/
@@ -59,7 +61,17 @@ ul.navbar-nav {margin-right: 3em;}
 
 a.nav-link { margin: 0 1em 0 1em; }
 
-/*.navbar a:hover { background-image: linear-gradient(transparent 64px, #F243B3 50%, #FFCA47 100%); }*/
+.active {
+    background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+}
+
+.navbar a:hover {
+    background-size: 100% 50%;
+}
 
 /**************************************/
 /************* FOOTER ***************/
@@ -72,16 +84,22 @@ a.nav-link { margin: 0 1em 0 1em; }
 /**********************************/
 
 .jumbotron {
-    width: 100%;
-    height: 700px;
     background-image: url(../img/jumbotron.jpg);
-    position : absolute;
+    width: 100%;
+    /*height: 100%;*/
+    height: 700px;
+    /*position : relative;*/
     background-position: center;
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;*/
     background-size: cover;
 }
 
-.container.text-center.text-light { margin-top: 35em; }
+.jumbotron-fluid {
+    display: flex;
+    align-items: flex-end;
+}
+
+/*.container.text-center.text-light { margin-top: 35em; }*/
 
 /**************************************/
 /*********** UTILITIES **************/
@@ -116,28 +134,28 @@ a.nav-link { margin: 0 1em 0 1em; }
 /**********************************/
 
 .card {
-    background-image: linear-gradient(45deg, rgba(52, 149, 230, 0.9), rgba(236, 110, 173, 0.7));
-    /*background-image: linear-gradient(45deg, rgba(52, 149, 230, 1), rgba(236, 110, 173, 1));*/
-    background-size: 100%;
-    /*box-shadow: 0 1px 3px #EC6EAD, 0 1px 2px rgba(0,0,0,0.24);*/
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    /*background-image: linear-gradient(45deg, rgba(52, 149, 230, 0.9), rgba(236, 110, 173, 0.7));*/
+    /*background-size: 100%;*/
+    /*transition: all 0.3s cubic-bezier(.25,.8,.25,1);*/
+
+    background: #1e1e1e;
 }
 
 /*.card:hover {*/
 /*    box-shadow: 0 10px 28px #EC6EAD, 0 10px 10px #f3ec78;*/
 /*}*/
 
-.social_networks--right {
-    position: absolute;
-    bottom: -8%;
-    left: 60%;
-}
+/*.social_networks--right {*/
+/*    position: absolute;*/
+/*    bottom: -8%;*/
+/*    left: 60%;*/
+/*}*/
 
-.social_networks--left {
-    position: absolute;
-    bottom: -8%;
-    right: 60%;
-}
+/*.social_networks--left {*/
+/*    position: absolute;*/
+/*    bottom: -8%;*/
+/*    right: 60%;*/
+/*}*/
 
 
 /*.card{*/
