--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -145,17 +145,17 @@ a.nav-link { margin: 0 1em 0 1em; }
 /*    box-shadow: 0 10px 28px #EC6EAD, 0 10px 10px #f3ec78;*/
 /*}*/
 
-/*.social_networks--right {*/
-/*    position: absolute;*/
-/*    bottom: -8%;*/
-/*    left: 60%;*/
-/*}*/
+.social_networks--right {
+    position: absolute;
+    bottom: -8%;
+    left: 60%;
+}
 
-/*.social_networks--left {*/
-/*    position: absolute;*/
-/*    bottom: -8%;*/
-/*    right: 60%;*/
-/*}*/
+.social_networks--left {
+    position: absolute;
+    bottom: -8%;
+    right: 60%;
+}
 
 
 /*.card{*/
